--- a/src/test/java/com/google/gwt/resources/converter/multiple_declarations.css
+++ b/src/test/java/com/google/gwt/resources/converter/multiple_declarations.css
@@ -5,3 +5,9 @@ pre {
  white-space: -o-pre-wrap;
  word-wrap: break-word;
 }
+
+@sprite .foo {
+  gwt-image: 'bar';
+  height: 10px;
+  height: 20px;
+}
