Better management of elif and else nodes. Fix issue #129

--- a/src/test/java/com/google/gwt/resources/converter/conditional.css
+++ b/src/test/java/com/google/gwt/resources/converter/conditional.css
@@ -60,3 +60,49 @@
         color: black;
     }
 }
+
+@if property1 desktop {
+  .foo3 {
+  }
+
+  @if property2 true {
+    .foo1 {
+    }
+  }
+  @else {
+    .foo2 {
+    }
+  }
+}
+@elif  property1 blop {
+  .foo3 {
+  }
+}
+@elif  property1 blop2 {
+  @if property2 true {
+    .foo4 {
+    }
+  }
+}
+@else {
+  @if property2 true {
+    .foo4 {
+    }
+  }
+  @else {
+    .foo5 {
+    }
+  }
+
+  .foo6 {
+  }
+
+  @if property1 tablet {
+    .foo7 {
+    }
+  }
+  @else {
+    .foo8 {
+    }
+  }
+}
